--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "Angular-study",
   "version": "0.0.0",
+  "homepage": "https://actionanand.github.io/Angular-study/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-gh": "ng build --output-path dist --base-href /Angular-study/",
+    "predeploy": "npm run build-gh",
+    "deploy": "gh-pages -d dist"
   },
   "private": true,
   "dependencies": {
@@ -27,15 +31,15 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^8.0.0",
     "@angular-devkit/build-angular": "~0.800.0",
-    "typescript": "3.4.5",
     "@angular/cli": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.0.2",
     "codelyzer": "^5.0.1",
+    "gh-pages": "^4.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -45,6 +49,10 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.1.0",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "3.4.5"
+  },
+  "engines": {
+    "node": ">=10 <13"
   }
 }
